--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -21,7 +21,7 @@
 
     <!--Second slide-->
     <div class="carousel-item">
-      <div class="view" style='background-image: url("<%= asset_path('inu.jpg') %>"); background-repeat: no-repeat; background-size: cover;'>
+      <div class="view" style='background-image: url("<%= asset_path('harinezumi.jpg') %>"); background-repeat: no-repeat; background-size: cover;'>
         <%= render "carouselcontent" %>
       </div>
     </div>
@@ -29,7 +29,7 @@
 
     <!--Third slide-->
     <div class="carousel-item">
-      <div class="view" style='background-image: url("<%= asset_path('nekoasi.jpeg') %>"); background-repeat: no-repeat; background-size: cover;'>
+      <div class="view" style='background-image: url("<%= asset_path('pig.jpeg') %>"); background-repeat: no-repeat; background-size: cover;'>
         <%= render "carouselcontent" %>
       </div>
     </div>
