--- a/app/views/pages/_carouselcontent.html.erb
+++ b/app/views/pages/_carouselcontent.html.erb
@@ -1,26 +1,22 @@
 <!-- Mask & flexbox options-->
-<div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+<div class="mask rgba-black-light d-flex flex-column justify-content-around align-items-around">
   <!-- Content -->
-  <div class="text-center white-text mx-5 wow fadeIn">
-    <h1 class="mb-4">
-      <strong>もぐもぐ動物病院</strong>
+  <div class="text-center white-text mx-1 wow fadeIn">
+    <h1 class="mt-5 pt-5">
+      もぐもぐ動物病院
     </h1>
-
-    <p>
-      <strong>TODO:アイコン整列</strong>
-    </p>
-
-    <p class="mb-4 d-none d-md-block">
-      <strong>The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and
-        written versions
-        available. Create your own, stunning website.</strong>
-    </p>
-
-    <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">Start
-      free tutorial
-      <i class="fas fa-graduation-cap ml-2"></i>
-    </a>
   </div>
   <!-- Content -->
+  <div class="row">
+    <div class="col-sm-2 offset-sm-3">
+      <img class="d-block mx-auto icon" src="<%= image_url('s_icon_morning.png') %>" alt="">
+    </div>
+    <div class="col-sm-2">
+      <img class="d-block mx-auto" src="<%= image_url('s_icon_afternoon.jpg') %>" alt="">
+    </div>
+    <div class="col-sm-2">
+      <img class="d-block mx-auto" src="<%= image_url('s_icon_night.jpg') %>" alt="">
+    </div>
+  </div>
 </div>
 <!-- Mask & flexbox options-->
