--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -4,7 +4,7 @@
 
     <!-- Brand -->
     <a class="navbar-brand" href="https://mdbootstrap.com/docs/jquery/" target="_blank">
-      <strong>もぐもぐ動物病院</strong>
+      <strong>もぐもぐ</strong>
     </a>
 
     <!-- Collapse -->
