目線の流れを重視したレイアウトに変更

--- a/app/views/pages/_carouselcontent.html.erb
+++ b/app/views/pages/_carouselcontent.html.erb
@@ -9,13 +9,13 @@
   <!-- Content -->
   <div class="row">
     <div class="col-sm-2 offset-sm-3">
-      <img class="d-block mx-auto icon" src="<%= image_url('s_icon_morning.png') %>" alt="">
+      <img class="d-block mx-auto rounded-circle icon" src="<%= image_url('s_icon_morning.png') %>" alt="">
     </div>
     <div class="col-sm-2">
-      <img class="d-block mx-auto" src="<%= image_url('s_icon_afternoon.jpg') %>" alt="">
+      <img class="d-block mx-auto rounded-circle" src="<%= image_url('s_icon_afternoon.jpg') %>" alt="">
     </div>
     <div class="col-sm-2">
-      <img class="d-block mx-auto" src="<%= image_url('s_icon_night.jpg') %>" alt="">
+      <img class="d-block mx-auto rounded-circle" src="<%= image_url('s_icon_night.jpg') %>" alt="">
     </div>
   </div>
 </div>
