--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -1,6 +1,80 @@
 <!--Main layout-->
 <div class="container">
 
+  <!--Section: Main features & Quick Start-->
+  <section>
+
+    <h1 class="feature-title text-center mt-5 mb-5">キャッチ：一番の売りを書く</h1>
+
+    <!--Grid row-->
+    <div class="row wow fadeIn">
+
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12 px-4">
+
+        <!--First row-->
+        <div class="row">
+          <div class="col-1 mr-3">
+            <i class="fas fa-code fa-2x indigo-text"></i>
+          </div>
+          <div class="col-10">
+            <h5 class="feature-title">もぐもぐ動物病院</h5>
+            <p class="grey-text">石狩市に開院したもぐもぐ動物病院は、昼間も夜間も受診できる動物病院です。<br>
+            札幌・小樽・石狩にお住まいのペット愛好家のみなさまと一緒に、ペットの健康と安全を全力でサポートいたします。</p>
+          </div>
+        </div>
+        <!--/First row-->
+
+        <div style="height:30px"></div>
+
+        <!--Second row-->
+        <div class="row">
+          <div class="col-1 mr-3">
+            <i class="fas fa-book fa-2x blue-text"></i>
+          </div>
+          <div class="col-10">
+            <h5 class="feature-title">診療</h5>
+            <p class="grey-text">こんなことに力入れています
+            </p>
+          </div>
+        </div>
+        <!--/Second row-->
+
+        <div style="height:30px"></div>
+
+        <!--Third row-->
+        <div class="row">
+          <div class="col-1 mr-3">
+            <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
+          </div>
+          <div class="col-10">
+            <h5 class="feature-title">夜間も対応</h5>
+            <p class="grey-text">夜もやってますので</p>
+          </div>
+        </div>
+        <!--/Third row-->
+
+      </div>
+      <!--/Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-6 col-md-12">
+
+        <p class="h5 text-center mb-4">院内紹介</p>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
+        </div>
+      </div>
+      <!--/Grid column-->
+
+    </div>
+    <!--/Grid row-->
+
+  </section>
+  <!--Section: Main features & Quick Start-->
+
+  <hr class="my-5">
+
   <!--Section: Main info-->
   <section class="mt-5 wow fadeIn">
 
@@ -17,102 +91,27 @@
 
   <hr class="my-5">
 
-  <!--Section: Main features & Quick Start-->
-  <section>
-
-    <h3 class="h3 text-center mb-5">About MDB</h3>
-
-    <!--Grid row-->
-    <div class="row wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12 px-4">
-
-        <!--First row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-code fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">Bootstrap 4</h5>
-            <p class="grey-text">Thanks to MDB you can take advantage of all feature of newest Bootstrap 4.</p>
-          </div>
-        </div>
-        <!--/First row-->
-
-        <div style="height:30px"></div>
-
-        <!--Second row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-book fa-2x blue-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">Detailed documentation</h5>
-            <p class="grey-text">We give you detailed user-friendly documentation at your disposal. It will help
-              you to implement your ideas
-              easily.
-            </p>
-          </div>
-        </div>
-        <!--/Second row-->
-
-        <div style="height:30px"></div>
-
-        <!--Third row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">Lots of tutorials</h5>
-            <p class="grey-text">We care about the development of our users. We have prepared numerous tutorials,
-              which allow you to learn
-              how to use MDB as well as other technologies.</p>
-          </div>
-        </div>
-        <!--/Third row-->
-
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12">
-
-        <p class="h5 text-center mb-4">Watch our "5 min Quick Start" tutorial</p>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
-        </div>
-      </div>
-      <!--/Grid column-->
-
-    </div>
-    <!--/Grid row-->
-
-  </section>
-  <!--Section: Main features & Quick Start-->
-
-  <hr class="my-5">
-
   <!--Section: Not enough-->
   <section>
 
-    <h2 class="my-5 h3 text-center">Not enough?</h2>
+    <h2 class="my-5 h3 text-center">院長あいさつ/経歴</h2>
 
     <!--First row-->
     <div class="row features-small mb-5 mt-3 wow fadeIn">
 
       <!--First column-->
-      <div class="col-md-4">
+      <div class="col-md-8">
         <!--First row-->
         <div class="row">
-          <div class="col-2">
+          <div class="col-2 flex-center">
             <i class="fas fa-check-circle fa-2x indigo-text"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">Free for personal and commercial use</h6>
-            <p class="grey-text">Our license is user-friendly. Feel free to use MDB for both private as well as
-              commercial projects.
+            <h3 class="feature-title mb-2">ごあいさつ</h3>
+            <p class="grey-text">生まれも育ちも全く違うところですが、<br>
+                                石狩市に動物の夜間および休日診療体制を構築すべく開業しました。<br>
+                                いずれは24時間体制の動物病院を創りたいと考えています。<br>
+                                もぐもぐ動物病院　病院長　筈見友洋
             </p>
             <div style="height:15px"></div>
           </div>
@@ -121,47 +120,37 @@
 
         <!--Second row-->
         <div class="row">
-          <div class="col-2">
+          <div class="col-2 flex-center">
             <i class="fas fa-check-circle fa-2x indigo-text"></i>
           </div>
           <div class="col-10">
-            <h6 class="feature-title">400+ UI elements</h6>
-            <p class="grey-text">An impressive collection of flexible components allows you to develop any project.
+            <h3 class="feature-title mb-2">プロフィール</h3>
+            <h6>経歴</h6>
+            <p class="grey-text">
+              酪農学園大学獣医学部獣医学科卒業<br>
+              元酪農学園大学附属動物病院 眼科研修医<br>
+              元札幌ノースアニマルクリニック 勤務医<br>
+              インターパーク動物病院 勤務医
+            </p>
+            <div style="height:15px"></div>
+            <h6>所属</h6>
+            <p class="grey-text">
+              日本獣医師会
+            </p>
+            <div style="height:15px"></div>
+            <h6>学会発表/執筆</h6>
+            <p class="grey-text">
+              酪農学園大学における犬の<br>
+              酪農学園大学における進行性<br>
+              経結膜アプローチ<br>
+              造影CTなどなど<br>
             </p>
             <div style="height:15px"></div>
           </div>
         </div>
         <!--/Second row-->
-
-        <!--Third row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">600+ icons</h6>
-            <p class="grey-text">Hundreds of useful, scalable, vector icons at your disposal.</p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Third row-->
-
-        <!--Fourth row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">Fully responsive</h6>
-            <p class="grey-text">It doesn't matter whether your project will be displayed on desktop, laptop,
-              tablet or mobile phone. MDB
-              looks great on each screen.</p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Fourth row-->
       </div>
-      <!--/First column-->
+      <!--/First column -->
 
       <!--Second column-->
       <div class="col-md-4 flex-center">
@@ -169,71 +158,6 @@
           class="z-depth-0 img-fluid">
       </div>
       <!--/Second column-->
-
-      <!--Third column-->
-      <div class="col-md-4 mt-2">
-        <!--First row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">70+ CSS animations</h6>
-            <p class="grey-text">Neat and easy to use animations, which will increase the interactivity of your
-              project and delight your visitors.
-            </p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/First row-->
-
-        <!--Second row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">Plenty of useful templates</h6>
-            <p class="grey-text">Need inspiration? Use one of our predefined templates for free.</p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Second row-->
-
-        <!--Third row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">Easy installation</h6>
-            <p class="grey-text">5 minutes, a few clicks and... done. You will be surprised at how easy it is.
-            </p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Third row-->
-
-        <!--Fourth row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h6 class="feature-title">Easy to use and customize</h6>
-            <p class="grey-text">Using MDB is straightforward and pleasant. Components flexibility allows you deep
-              customization. You will
-              easily adjust each component to suit your needs.</p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Fourth row-->
-      </div>
-      <!--/Third column-->
-
-    </div>
-    <!--/First row-->
-
   </section>
   <!--Section: Not enough-->
 
