--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -2,9 +2,8 @@
 
   <!--Call to action-->
   <div class="pt-4">
-    <a class="btn btn-outline-white" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank"
-      role="button">Download MDB
-      <i class="fas fa-download ml-2"></i>
+    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalRegular">Regular map modal
+      <i class="fas fa-map ml-2"></i></button>
     </a>
     <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">Start
       free tutorial
@@ -59,3 +58,35 @@
   <!--/.Copyright-->
 
 </footer>
+
+<!--Modal: Name-->
+<div class="modal fade" id="modalRegular" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+
+    <!--Content-->
+    <div class="modal-content">
+
+      <!--Body-->
+      <div class="modal-body mb-0 p-0">
+
+        <!--Google map-->
+        <div id="map-container-google-16" class="z-depth-1-half map-container-9" style="height: 400px">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2909.9938670972338!2d141.3353643!3d43.1676529!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e88a47a95555%3A0xde795be06f24c01d!2z44K744OW44OzLeOCpOODrOODluODs-efs-eLqeiKseW3neadsTLmnaHlupc!5e0!3m2!1sja!2sjp!4v1549867272568"
+            frameborder="0" style="border:0; width: 800px; height: 450px;"></iframe>
+        </div>
+      </div>
+
+      <!--Footer-->
+      <div class="modal-footer justify-content-center">
+
+        <button type="button" class="btn btn-outline-info btn-md" data-dismiss="modal">Close <i class="fas fa-times ml-1"></i></button>
+
+      </div>
+
+    </div>
+    <!--/.Content-->
+
+  </div>
+</div>
+<!--Modal: Name-->
