--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -19,28 +19,28 @@
       <!-- Left -->
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">診療案内
+          <a class="nav-link" href="#">当院について
             <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">当院について</a>
+          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">診療時間</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank">設備紹介</a>
+          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank">院長あいさつ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">アクセス</a>
+          <a class="nav-link" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">おしらせ</a>
         </li>
       </ul>
 
       <!-- Right -->
       <ul class="navbar-nav nav-flex-icons">
         <li class="nav-item">
-          <a href="https://www.facebook.com/mdbootstrap" class="nav-link" target="_blank">院長あいさつ</a>
+          <a href="https://www.facebook.com/mdbootstrap" class="nav-link" target="_blank">設備紹介</a>
         </li>
         <li class="nav-item">
-          <a href="https://twitter.com/MDBootstrap" class="nav-link" target="_blank">おしらせ</a>
+          <a href="https://twitter.com/MDBootstrap" class="nav-link" target="_blank">アクセス</a>
         </li>
         <li class="nav-item">
           <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="nav-link border border-light rounded"
