--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -38,3 +38,21 @@ header,
 .icon {
   opacity: 0.5;
 }
+
+.map-container-9,
+.map-container-10,
+.map-container-11 {
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+}
+.map-container-9 iframe
+.map-container-10 iframe
+.map-container-11 iframe{
+left:40px;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+}
