--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -1,326 +1,45 @@
 <!--Main layout-->
 <div class="container">
 
-  <!--Section: Main features & Quick Start-->
+  <!--Section: Main -->
   <section>
-
-    <h1 class="feature-title text-center mt-5 mb-5">キャッチ：一番の売りを書く</h1>
-
-    <!--Grid row-->
-    <div class="row wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12 px-4">
-
-        <!--First row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-code fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">もぐもぐ動物病院</h5>
-            <p class="grey-text">石狩市に開院したもぐもぐ動物病院は、昼間も夜間も受診できる動物病院です。<br>
-            札幌・小樽・石狩にお住まいのペット愛好家のみなさまと一緒に、ペットの健康と安全を全力でサポートいたします。</p>
-          </div>
-        </div>
-        <!--/First row-->
-
-        <div style="height:30px"></div>
-
-        <!--Second row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-book fa-2x blue-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">診療</h5>
-            <p class="grey-text">こんなことに力入れています
-            </p>
-          </div>
-        </div>
-        <!--/Second row-->
-
-        <div style="height:30px"></div>
-
-        <!--Third row-->
-        <div class="row">
-          <div class="col-1 mr-3">
-            <i class="fas fa-graduation-cap fa-2x cyan-text"></i>
-          </div>
-          <div class="col-10">
-            <h5 class="feature-title">夜間も対応</h5>
-            <p class="grey-text">夜もやってますので</p>
-          </div>
-        </div>
-        <!--/Third row-->
-
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-lg-6 col-md-12">
-
-        <p class="h5 text-center mb-4">院内紹介</p>
-        <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cXTThxoywNQ" allowfullscreen></iframe>
-        </div>
-      </div>
-      <!--/Grid column-->
-
-    </div>
-    <!--/Grid row-->
-
+    <%= render "introduce" %>
   </section>
-  <!--Section: Main features & Quick Start-->
+  <!--Section: Main-->
 
   <hr class="my-5">
 
-  <!--Section: Main info-->
+  <!--Section: Calendar-->
   <section class="mt-5 wow fadeIn">
-
     <!--Grid row-->
     <div class="row">
-
       <div id="calendar"></div>
-
     </div>
     <!--Grid row-->
-
   </section>
   <!--Section: Main info-->
 
   <hr class="my-5">
 
-  <!--Section: Not enough-->
+  <!--Section: greeting-->
   <section>
-
-    <h2 class="my-5 h3 text-center">院長あいさつ/経歴</h2>
-
-    <!--First row-->
-    <div class="row features-small mb-5 mt-3 wow fadeIn">
-
-      <!--First column-->
-      <div class="col-md-8">
-        <!--First row-->
-        <div class="row">
-          <div class="col-2 flex-center">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h3 class="feature-title mb-2">ごあいさつ</h3>
-            <p class="grey-text">生まれも育ちも全く違うところですが、<br>
-                                石狩市に動物の夜間および休日診療体制を構築すべく開業しました。<br>
-                                いずれは24時間体制の動物病院を創りたいと考えています。<br>
-                                もぐもぐ動物病院　病院長　筈見友洋
-            </p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/First row-->
-
-        <!--Second row-->
-        <div class="row">
-          <div class="col-2 flex-center">
-            <i class="fas fa-check-circle fa-2x indigo-text"></i>
-          </div>
-          <div class="col-10">
-            <h3 class="feature-title mb-2">プロフィール</h3>
-            <h6>経歴</h6>
-            <p class="grey-text">
-              酪農学園大学獣医学部獣医学科卒業<br>
-              元酪農学園大学附属動物病院 眼科研修医<br>
-              元札幌ノースアニマルクリニック 勤務医<br>
-              インターパーク動物病院 勤務医
-            </p>
-            <div style="height:15px"></div>
-            <h6>所属</h6>
-            <p class="grey-text">
-              日本獣医師会
-            </p>
-            <div style="height:15px"></div>
-            <h6>学会発表/執筆</h6>
-            <p class="grey-text">
-              酪農学園大学における犬の<br>
-              酪農学園大学における進行性<br>
-              経結膜アプローチ<br>
-              造影CTなどなど<br>
-            </p>
-            <div style="height:15px"></div>
-          </div>
-        </div>
-        <!--/Second row-->
-      </div>
-      <!--/First column -->
-
-      <!--Second column-->
-      <div class="col-md-4 flex-center">
-        <img src="https://mdbootstrap.com/img/Others/screens.png" alt="MDB Magazine Template displayed on iPhone"
-          class="z-depth-0 img-fluid">
-      </div>
-      <!--/Second column-->
+    <%= render "greeting"%>
   </section>
-  <!--Section: Not enough-->
+  <!--Section: greeting -->
+
+  <hr class="mb-5">
+
+  <!--Section: Magazine v.1-->
+  <section class="wow fadeIn">
+    <%= render "bloglayout" %>
+  </section>
+  <!--/Section: Magazine v.1-->
 
   <hr class="mb-5">
 
   <!--Section: More-->
   <section>
-
-    <h2 class="my-5 h3 text-center">...and even more</h2>
-
-    <!--First row-->
-    <div class="row features-small mt-5 wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fab fa-firefox fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2 pl-3">
-            <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-            <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers;
-              all browsers love MDB.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-level-up-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-            <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as
-              possible.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-comments fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Active community</h5>
-            <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it is to be a
-              part of our family.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">jQuery 3.x</h5>
-            <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use all the latest
-              features which come along with
-              it.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-    </div>
-    <!--/First row-->
-
-    <!--Second row-->
-    <div class="row features-small mt-4 wow fadeIn">
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Modularity</h5>
-            <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use
-              libraries including all features as
-              well as modules for CSS (SASS files) and JS.</p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-question fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Technical support</h5>
-            <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to
-              contact us.
-            </p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="fas fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-            <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-      <!--Grid column-->
-      <div class="col-xl-3 col-lg-6">
-        <!--Grid row-->
-        <div class="row">
-          <div class="col-2">
-            <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-          </div>
-          <div class="col-10 mb-2">
-            <h5 class="feature-title font-bold mb-1">SASS files</h5>
-            <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
-          </div>
-        </div>
-        <!--/Grid row-->
-      </div>
-      <!--/Grid column-->
-
-    </div>
-    <!--/Second row-->
-
+    <%= render "facility" %>
   </section>
   <!--Section: More-->
 
