TopPageの外観レイアウト

--- a/app/views/pages/_introduce.html.erb
+++ b/app/views/pages/_introduce.html.erb
@@ -1,4 +1,4 @@
-<h1 class="feature-title text-center mt-5 mb-5">キャッチ：一番の売りを書く</h1>
+<h1 class="feature-title text-center mt-5 mb-5">キャッチ：石狩市の動物病院です</h1>
 
 <!--Grid row-->
 <div class="row wow fadeIn">
