--- a/app/views/pages/_bloglayout.html.erb
+++ b/app/views/pages/_bloglayout.html.erb
@@ -2,7 +2,7 @@
 <section class="wow fadeIn">
 
   <!--Section heading-->
-  <h3 class="text-center my-5 font-weight-bold">おしらせ/料理</h3>
+  <h3 class="text-center my-5 font-weight-bold" id="#information">おしらせ/料理</h3>
 
   <!--Grid row-->
   <div class="row text-left">
