--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,20 +1,16 @@
-<footer class="page-footer text-center font-small mt-4 wow fadeIn">
+<footer class="page-footer text-center font-small mt-4 wow fadeIn" id="access">
 
   <!--Call to action-->
   <div class="pt-4">
-    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalRegular">Regular map modal
+    <button type="button" class="btn btn-info" data-toggle="modal" data-target="#modalRegular">アクセス
       <i class="fas fa-map ml-2"></i></button>
-    </a>
-    <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button">Start
-      free tutorial
-      <i class="fas fa-graduation-cap ml-2"></i>
     </a>
   </div>
   <!--/.Call to action-->
 
   <hr class="my-4">
 
-  <!-- Social icons -->
+  <%# <!-- Social icons -->
   <div class="pb-4">
     <a href="https://www.facebook.com/mdbootstrap" target="_blank">
       <i class="fab fa-facebook-f mr-3"></i>
@@ -48,7 +44,7 @@
       <i class="fab fa-codepen mr-3"></i>
     </a>
   </div>
-  <!-- Social icons -->
+  <!-- Social icons --> %>
 
   <!--Copyright-->
   <div class="footer-copyright py-3">
@@ -80,7 +76,7 @@
       <!--Footer-->
       <div class="modal-footer justify-content-center">
 
-        <button type="button" class="btn btn-outline-info btn-md" data-dismiss="modal">Close <i class="fas fa-times ml-1"></i></button>
+        <button type="button" class="btn btn-outline-info btn-md" data-dismiss="modal">閉じる <i class="fas fa-times ml-1"></i></button>
 
       </div>
 
