--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -1,5 +1,5 @@
 <!--Main layout-->
-<div class="container">
+<div class="container" id="about">
 
   <!--Section: Main -->
   <section>
@@ -7,7 +7,7 @@
   </section>
   <!--Section: Main-->
 
-  <hr class="my-5">
+  <hr class="my-5" id="schedule">
 
   <!--Section: Calendar-->
   <section class="mt-5 wow fadeIn">
@@ -19,7 +19,7 @@
   </section>
   <!--Section: Main info-->
 
-  <hr class="my-5">
+  <hr class="my-5" id="greeting">
 
   <!--Section: greeting-->
   <section>
@@ -27,7 +27,7 @@
   </section>
   <!--Section: greeting -->
 
-  <hr class="mb-5">
+  <hr class="mb-5" id="information">
 
   <!--Section: Magazine v.1-->
   <section class="wow fadeIn">
@@ -35,7 +35,7 @@
   </section>
   <!--/Section: Magazine v.1-->
 
-  <hr class="mb-5">
+  <hr class="mb-5" id="facility">
 
   <!--Section: More-->
   <section>
