--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -18,33 +18,30 @@
 
       <!-- Left -->
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">当院について
-            <span class="sr-only">(current)</span>
-          </a>
+        <li class="nav-item">
+          <a class="nav-link" href="#about">当院について</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/" target="_blank">診療時間</a>
+          <a class="nav-link" href="#schedule">診療案内</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank">院長あいさつ</a>
+          <a class="nav-link" href="#greeting">院長あいさつ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://mdbootstrap.com/education/bootstrap/" target="_blank">おしらせ</a>
+          <a class="nav-link" href="#information">おしらせ</a>
         </li>
       </ul>
 
       <!-- Right -->
       <ul class="navbar-nav nav-flex-icons">
         <li class="nav-item">
-          <a href="https://www.facebook.com/mdbootstrap" class="nav-link" target="_blank">設備紹介</a>
+          <a href="#facility" class="nav-link">設備紹介</a>
+        </li> 
+        <li class="nav-item">
+          <a href="#access" class="nav-link" data-toggle="modal" data-target="#modalRegular">アクセス</a>
         </li>
         <li class="nav-item">
-          <a href="https://twitter.com/MDBootstrap" class="nav-link" target="_blank">アクセス</a>
-        </li>
-        <li class="nav-item">
-          <a href="https://github.com/mdbootstrap/bootstrap-material-design" class="nav-link border border-light rounded"
-            target="_blank">もぐもぐブログ</a>
+          <a href="" class="nav-link border border-light rounded"><i class="fas fa-book"></i>もぐもぐブログ</a>
         </li>
       </ul>
 
