ブログ機能のマージ前

--- a/app/views/pages/_greeting.html.erb
+++ b/app/views/pages/_greeting.html.erb
@@ -44,10 +44,11 @@
         <div style="height:15px"></div>
         <h6>学会発表/執筆</h6>
         <p class="grey-text">
-          酪農学園大学における犬の<br>
-          酪農学園大学における進行性<br>
-          経結膜アプローチ<br>
-          造影CTなどなど<br>
+          酪農学園大学における犬の難治性角膜上皮びらんの治療成績<br>(2008年北海道獣医師会雑誌)<br>
+          酪農学園大学における進行性網膜萎縮と診断したミニチュア・ダックスフントの回顧的検討<br>(2013年北海道獣医師会雑誌)<br>
+          経結膜アプローチにより眼窩腫瘍を視認し生検した犬の1例<br>(2014年北海道獣医師会雑誌)<br>
+          強膜内シリコンインプラント挿入術後の角膜知覚と涙液量について<br>(2012年比較眼科学会年次大会)<br>
+          造影CT検査により犬のインスリノーマの術前評価を行った犬の2症例<br>(2012年北海道獣医師会雑誌)
         </p>
         <div style="height:15px"></div>
       </div>
