--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -41,7 +41,8 @@
           <a href="#access" class="nav-link" data-toggle="modal" data-target="#modalRegular">アクセス</a>
         </li>
         <li class="nav-item">
-          <a href="" class="nav-link border border-light rounded"><i class="fas fa-book"></i>もぐもぐブログ</a>
+          <a href="https://mogumogu-blog.herokuapp.com/" class="nav-link border border-light rounded">
+          <i class="fas fa-book"></i>もぐもぐブログ</a>
         </li>
       </ul>
 
