HPとブログページのCSSを出し分ける

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -47,8 +47,8 @@ padding-bottom:56.25%;
 position:relative;
 height:0;
 }
-.map-container-9 iframe
-.map-container-10 iframe
+.map-container-9 iframe,
+.map-container-10 iframe,
 .map-container-11 iframe{
 left:40px;
 top:0;
