--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag "blog/clean-blog.min", media: "all" %>
 <!-- カテゴリー別一覧表示のときにタイトルを変える -->
 <% provide :title, @blogs.first.category unless params[:category].nil? %>
 <body>
