アクセスの地図のずれを修正

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -69,7 +69,7 @@
         <!--Google map-->
         <div id="map-container-google-16" class="z-depth-1-half map-container-9" style="height: 400px">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2909.9938670972338!2d141.3353643!3d43.1676529!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e88a47a95555%3A0xde795be06f24c01d!2z44K744OW44OzLeOCpOODrOODluODs-efs-eLqeiKseW3neadsTLmnaHlupc!5e0!3m2!1sja!2sjp!4v1549867272568"
-            frameborder="0" style="border:0; width: 800px; height: 450px;"></iframe>
+            frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
 
