--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -50,7 +50,7 @@ height:0;
 .map-container-9 iframe,
 .map-container-10 iframe,
 .map-container-11 iframe{
-left:40px;
+left:0;
 top:0;
 height:100%;
 width:100%;
