--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,6 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require font-awesome
  *= require bootstrap
  *= require fullcalendar
  *= require mdb
@@ -18,3 +17,5 @@
  *= require_directory .
  *= require_self
  */
+ @import "font-awesome-sprockets";
+ @import "font-awesome";
