fontawesomeの一部アイコン変更

--- a/app/views/pages/_bloglayout.html.erb
+++ b/app/views/pages/_bloglayout.html.erb
@@ -144,7 +144,7 @@
       <div class="news-data">
         <a href="" class="light-blue-text">
           <h6>
-            <i class="fas fa-apple"></i>
+            <i class="fas fa-bone"></i>
             <strong> お料理・レシピ</strong>
           </h6>
         </a>
