--- a/app/views/pages/_introduce.html.erb
+++ b/app/views/pages/_introduce.html.erb
@@ -24,7 +24,7 @@
     <!--Second row-->
     <div class="row">
       <div class="col-1 mr-3">
-        <i class="fas fa-apple fa-2x red-text"></i>
+        <i class="fas fa-briefcase-medical fa-2x red-text"></i>
       </div>
       <div class="col-10">
         <h5 class="feature-title">診療</h5>
@@ -39,7 +39,7 @@
     <!--Third row-->
     <div class="row">
       <div class="col-1 mr-3">
-        <i class="fas fa-star fa-2x yellow-text"></i>
+        <i class="fas fa-moon fa-2x yellow-text"></i>
       </div>
       <div class="col-10">
         <h5 class="feature-title">夜間も対応</h5>
